function decl shortcut

--- a/README.org
+++ b/README.org
@@ -1,16 +1,17 @@
 ## YASI/P6 -- Yet another Scheme implementation / Written in perl6 
 
-| Item                    | Status      |
-|-------------------------+-------------|
-| Lambdas                 | Yes         |
-| First class functions   | Yes         |
-| Test coverage           | Partial     |
-| REPL                    | Partial     |
-| Closure lexical scoping | No, planned |
-| Optimizations           | No, planned |
-| TCO                     | No, planned |
-| Delayed evaluations     | No, planned |
-| Continuations           | No          |
-| Macro                   | No          |
-| I/O                     | No          |
+| Item                    | Status            |
+|-------------------------+-------------------|
+| Lambdas                 | Yes               |
+| First class functions   | Yes               |
+| Test coverage           | Partial           |
+| REPL                    | Partial           |
+| Closure lexical scoping | No, planned       |
+| Optimizations           | No, planned       |
+| TCO                     | No, planned       |
+| Delayed evaluations     | No, planned       |
+| Full numeric tower      | No, planned       |
+| Continuations           | No                |
+| Macro                   | No                |
+| I/O                     | No                |
 
